--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 <div>
                     <label for="mood-selection">Enter your current mood:</label>
                     <select class="u-full-width" id="mood-selections">
-                      <option value="happy">Happy</option>
-                      <option value="sad">Sad</option>
-                      <option value="angry">Angry</option>
+                      <option value="happy music">Happy</option>
+                      <option value="sad music">Sad</option>
+                      <option value="angry music">Angry</option>
                     </select>
                   </div>
                 <div>
