local storage commit

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <div>
                     <label for="mood-selection">Enter your current mood:</label>
                     <select class="u-full-width" id="mood-selections">
+                      <option value=""></option>
                       <option value="happy">Happy</option>
                       <option value="sad">Sad</option>
                       <option value="angry">Angry</option>
