--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <input id="title" class="form">
         <button id="search" class="button">Search</button>
     </form>
-    <script src="assets/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
