final local storage and youtube API

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                     <label for="mood-selection">Enter your current mood:</label>
                     <select class="u-full-width" id="mood-selections">
                       <option value=""></option>
-                      <option value="happy">Happy</option>
-                      <option value="sad">Sad</option>
-                      <option value="angry">Angry</option>
+                      <option value="happy music">Happy</option>
+                      <option value="sad music">Sad</option>
+                      <option value="angry music">Angry</option>
                     </select>
                   </div>
                 <div>
@@ -47,6 +47,7 @@
                         feels</button>
                 </div>
             </form>
+            <div id="saved-content">Saved content:</div>
         </div>
         <div>
             <div>
