Mixcloud code added to project is now working.  I changed the mood values to add a - (happy-music, etc), so that mixcloud searches still work.  YouTube searches are still working as well.  I commented out 2 redundant functions in the YouTube code, lines 19-52 in script.js.  Everything seems to still work.

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                     <label for="mood-selection">Enter your current mood:</label>
                     <select class="u-full-width" id="mood-selections">
                       <option value=""></option>
-                      <option value="happy music">Happy</option>
-                      <option value="sad music">Sad</option>
-                      <option value="angry music">Angry</option>
+                      <option value="happy-music">Happy</option>
+                      <option value="sad-music">Sad</option>
+                      <option value="angry-music">Angry</option>
                     </select>
                   </div>
                 <div>
