Changed Last Playlist functionality to use a single button element store in index.html. Changed getYoutubeContent2 to retrieve last saved playlist from localStorage, saved-content key.

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             </form>
             <div id="saved-content">
                 <h3>Saved content:</h3>
+                <button id="vid-history-button">Last Playlist</button>
             </div>
         </div>
         <div>
