incorporated Miguel's CSS and JS goodness

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>In My Feels</title>
 </head>
 
-<body>
+<body id="myDivs">
     <header>
         <h1>GET IN YOUR FEELS</h1>
         <h2>Songs for your mood</h2>
@@ -43,7 +43,7 @@
             <!--this is where each Youtube playlist is saved to local storage-->
             <div id="content-position" id="saved-content">
                 <h3 class="content">Saved content:</h3>
-                <button id="vid-history-button">Last Playlist</button>
+                <button id="vid-history-button" class="button-primary">Last Playlist</button>
             </div>
         </div>
         <div>
